[project]
name = "davidkhala.ali"
version = "0.0.0"

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-credentials>=1.0.2",
]

[dependency-groups]
dev = [
    #    "alibabacloud-tea-console>=0.0.1",
]
[project.optional-dependencies]
analytic = ["alibabacloud_gpdb20160503"]
